tests/NormalTests/paczka1/small_fuzzy/49993446.err
Error in line 2: S43 A653 35,9
Error in line 1: lNaRSbxbR S121 35,7
Error in line 13: woTmw S121 77,1
